Fix spelling error

--- a/docs/data-structure/set/set.mdx
+++ b/docs/data-structure/set/set.mdx
@@ -132,7 +132,7 @@ graph TD
     E --> F
 ```
 
-Seguramente estéis pensando que esto se hace a traves de librerías de formularios como `react-hook-form` o `formik`, y tenéis razón, pero el objetivo de este ejemplo es entender el funcionamiento de los `Set`.
+Seguramente estéis pensando que esto se hace a través de librerías de formularios como `react-hook-form` o `formik`, y tenéis razón, pero el objetivo de este ejemplo es entender el funcionamiento de los `Set`.
 
 La clave es utilizar el `Set` para comprobar datos únicos y ver que es más sencillo y más eficiente que cuando usamos un array, después de este ejemplo explico por qué es más eficiente.
 
